# trading_system

./: setup.cfg
Tradingbot/: pyproject.toml
Tradingbot/config/: alert_config.py  config.py  meta_learning_config.py  ml_config.py  monitoring_config.py
Tradingbot/src/core/: architecture_optimization.py  enhanced_system.py  error_handling.py  performance_analytics.py  state_management.py
Tradingbot/src/core/analytics/: predictive_analytics.py
Tradingbot/src/core/backtesting/: execution_simulator.py
Tradingbot/src/core/data/: data_storage.py
Tradingbot/src/core/event_detection/: news_analyzer.py
Tradingbot/src/core/execution/: position_manager.py
Tradingbot/src/core/mL/: ml_pipeline_coordinator.py
Tradingbot/src/core/market_analysis/: condition_analyzer.py
Tradingbot/src/core/market_microstructure/: liquidity_modeling.py  market_microstructure.py
Tradingbot/src/core/meta_learning/: __init__.py  adaptation_tracker.py  advanced_adaptation.py  advanced_pattern_recognition.py  enhanced_learning_mechanisms.py  experience_bank.py  learning_patterns.py  meta_learning_integrator.py  meta_model_optimizer.py
Tradingbot/src/core/metrics/: metrics_system.py
Tradingbot/src/core/monitoring/: collectors.py  handlers.py  monitor.py  recovery.py
Tradingbot/tests/: conftest.py
Tradingbot/tests/integration/: test_strategy_execution.py  test_system_integration.py
Tradingbot/tests/load/: test_system_load.py
Tradingbot/tests/performance/: test_system_performance.py
Tradingbot/tests/unit/: meta_learning_tests.py  test_risk_management.py
config/: data_config.py  (+3 more)
(+59 files in other folders)
